all file link to one css

--- a/makingof.html
+++ b/makingof.html
@@ -94,8 +94,8 @@
         </div>
 
         <div id="faboutWebsite">
-            <h1>Your Website Title</h1>
-            <p>Some short text about your website.</p>
+            <h1>WildWhiskers</h1>
+            <p>Your Ultimate Guide to Pets and Wildlife.</p>
         </div>
 
         <div id="fcopyright">
