--- a/Dogs.html
+++ b/Dogs.html
@@ -29,8 +29,8 @@
             </nav>
 
             <div id="sub-topic-title">
-                <h1>Man's best friend</h1>
-                <h3> loyalty, friendship, and companionship with humans</h3>
+                <h1 id="dogs-title">WoofWonder</h1>
+                <h3> Unleashing the Charm of Man's Best Friend</h3>
             </div>
         </div>
 
@@ -178,8 +178,8 @@
             </div>
 
             <div id="aboutWebsite">
-                <h1>Your Website Title</h1>
-                <p>Some short text about your website.</p>
+                <h1>WildWhiskers</h1>
+            <p>Your Ultimate Guide to Pets and Wildlife.</p>
             </div>
 
             <div id="copyright">
