all file link to one css

--- a/Home.html
+++ b/Home.html
@@ -83,7 +83,7 @@
                     <button type="button" onclick="submitForm()">Register</button>
 
                     <div id="confirmationMessage" class="confirmation" style="display:none;">
-                        Thank you for Registering!
+                        Thank you for Registering! page will reload in 5 seconds.
                     </div>
 
                     <div id="errorMessage" class="error" style="display:none;">
