--- a/birds.html
+++ b/birds.html
@@ -1,122 +1,176 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>Birds</title>
-  <link rel="stylesheet" type="text/css" href="birdstyle.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="jpg/logo.png">
+    <title>birds</title>
+    <link rel="stylesheet" href="homestyles.css">
+    <script src="ScriptForWebsite.js"></script>
 </head>
 
 <body>
-	<div id="container">
-		<div id="header">
-		<div id="title">
-			<h1>Birds</h1>
-		</div>
-		
-		<div id="navigation">
-			<a href="Home.html">Home</a>
-            <a href="#sub-topic1">Sub-Topic 1</a>
-            <a href="#sub-topic2">Sub-Topic 2</a>
-            <a href="Birds.html">Birds</a>
-            <a href="#making-of-website">Making of Website</a>
-            <a href="#our-story">Our Story</a>
-			<span id="name"></span>
-		</div>
-		</div>
-		<div id="imge">
-		<div id="content1">
-			<img src="jpg/Macaw.jpg" alt="Macaw">
-			<div id="text1">
-				<h2>Macaw</h2>
-				<p><span class="bold">Name:</span> Tony</p>
-				<p><span class="bold">Age:</span> 13 years</p>
-				<p><span class="bold">Eats: </span> Seed, Nuts, Frutis and Vegetation</p>
-				<p>
-				<span class="bold">About the bird:</span><span class="background"> The Macaw is a smart and colorful birds known for its playful nature and eye-catching colors. Because of 
-				their average lifespan of 30 to 50 years, these magnificent creatures require special care and attention. Regular animal care examinations, mental 
-				stimulation, and a spacious environment are essential for their health. Feed them an appropriate amount of fresh fruits and vegetables, nuts and 
-				seeds to keep them healthy. Spending a lot of time with macaws can help you to build a strong bond with them.  Macaws can bring happiness and 
-				companionship for many years if properly cared for and loved.</span>
-				</p>
-			</div>
-		</div>
-		
-		<div id="content2">
-			<img src="jpg/Cockatoos.jpg" alt="Cockatoos">
-			<div id="text2">
-				<h2>Sulphur-crested Cockatoos</h2>
-				<p><span class="bold">Name:</span> Derek</p>
-				<p><span class="bold">Age:</span> 17 years</p>
-				<p><span class="bold">Eats: </span> Nuts, Berries, Flowers and Nectar</p>
-				<p>
-				<span class="bold">About the bird:</span> <span class="background">Australia and New Guinea are home to the beautiful and intelligent 
-				Sulphur-crested Cockatoo. Their unique yellow crest distinguishes them. These Cockatoos live for 40 to 70 years, which makes them excellent 
-				long-term companions. A balanced diet consisting of fresh fruits and vegetables, and the occasional nut is required. Physical activity, mental 
-				stimulation, and social interaction are all important for their well-being. Cockatoos need a big, enhancing environment with many toys and time of 
-				play. With proper care, love, and attention, Sulphur-crested Cockatoos can become beloved pets for a lifetime.</span>
-				</p>
-			</div>
-		</div>
-		
-		<div id="content3">
-			<img src="jpg/Fischers Lovebird.jpg" alt="LoveBird">
-			<div id="text3">
-				<h2>Fischer's Lovebird</h2>
-				<p><span class="bold">Name:</span> Lucy</p>
-				<p><span class="bold">Age:</span> 5 years</p>
-				<p><span class="bold">Eats: </span> Seeds, Vegetables, Nuts and Grains</p>
-				<p>
-				<span class="bold">About the bird:</span><span class="background"> Fischer's Lovebird is an African parrot known for being small and colorful. Because of their attractive
-				color and joyful nature, they make wonderful family member. The average lifespan of these lovebirds is 10 to 15 years; however, some may live much
-				longer if given adequate care for. For their health, it is critical to provide a balanced diet of pellets, fresh fruits and vegetables, and the 
-				occasional seed. Lovebirds are social creatures, so it's important to spend time with them every day. They need a big cage filled with toys and 
-				time for exercise. If given love, care, and an engaging environment, Fischer's Lovebirds could provide their owners joy and companionship.</span>
-				</p>
-			</div>
-		</div>
-		<div id="user">
-			<h2><span class="bold">Why to adopt birds? </span></h2>
-			<p>
-			<span class="background">Adopting a bird as a pet can be a rewarding and interesting experience. Birds make excellent companions and can become a great
-			family member. They add to your house a lively colors, lovely sounds, and attractive behaviors. Birds are intelligent creatures that can be trained to 
-			perform tricks, mimic sounds, and even engage in playful activities. They bring us joy and laughter and provide us with endless entertainment. Birds 
-			also require less space than other pets, making them suitable for a wide range of living situations. They can be an excellent choice for individuals 
-			or families that are looking for an easy to take care of pet. If properly cared for, a bird can live a long and healthy life, being a beloved companion
-			for years to come.</span>
-			</p>
-		</div>
-		</div>
-		<div id="footer">
-			<div id="social-media">
-            <h4>Follow us on</h4>
-            <a href="https://www.facebook.com/"><img src="facebook_icon.png" alt="facebook"></a>
-            <a href="https://www.instagram.com/"><img src="insta_icon.png" alt="instagram"></a>
-            <a href="https://www.twitter.com/"><img src="twitter1.png" alt="twitter"></a>
-			</div>
+    <div id="background-birds">
+        <div id="header">
 
-			<div id="contact">
-            <h4>Contact us</h4>
-            <img src="carbon_location.png" alt="carbon_location"> <a href="https://www.polytechnic.bh/">Polytechnic</a>
-            <img src="carbon_phone-voice.png" alt="carbon_phone-voice"> <a href="tel:+97333151099">33151099</a>
-            <img src="clarity_email-line.png" alt="clarity_email-line"> <a
-                href="mailto:info@animals.com">info@animals.com</a>
-			</div>
+            <nav>
+                <div id="link-font">
+                    <a href="Home.html">Home</a>
+                    <a href="Dogs.html">Dogs</a>
+                    <a href="birds.html">Birds</a>
+                    <a href="cat.html">Cats</a>
+                    <a href="makingof.html">Making of Website</a>
+                    <a href="our-story.html">Our Story</a>
+                </div>
+                <div id="greeting" class="greeting">
+                    Hello,
+                </div>
+            </nav>
 
-			<div id="aboutWebsite">
-            <h1>Your Website Title</h1>
-            <p>Some short text about your website.</p>
-			</div>
+            <div id="sub-topic-title">
+                <h1 id="Birds-title">FeatheredMarvel</h1>
+                <h3> Revealing the Wings Enchantments </h3>
+            </div>
+        </div>
 
-			<div id="copyright">
-            <p>&copy; 2022 Your Website Name. All rights reserved.</p>
-			</div>
-		</div>
-		
-		<script>
-			document.getElementById("name").innerHTML=localStorage.getItem("firstName");
-		</script>
-		
-		
+        <div class="main">
+
+            <div class="breed">
+                <div class="image">
+                    <img src="jpg/Macaw.jpg" alt="Macaw">
+                </div>
+                <div class="info">
+                    <h2 id="card">Macaw</h2>
+                    <p id="sub-topic"><span class="label-sub-topic">Life Expectancy:</span> 30-50 years</p>
+                    <p id="sub-topic"><span class="label-sub-topic">Loyalty:</span> Very High </p>
+                    <p id="sub-topic"><span class="label-sub-topic">Temperament:</span> Intelligent, Playful</p>
+                    <p id="sub-topic"><span class="label-sub-topic">Size:</span> Large</p>
+                    <hr>
+                    <div class="arrow">&#9660;</div>
+
+                    <p class="expandable">The Macaw and called a parrot, is a smart and colorful bird. Also known for their ability to mimic sounds. tropical North
+					and South America are home for these beautiful creatures. Their average lifespan is between 30 to 50 years. They eat fresh fruits and 
+					vegetables, nuts. Spending a lot of time with macaws can help you to build a strong bond with them.  Macaws can bring happiness and 
+					companionship for many years if properly cared for and loved.</p>
+                </div>
+            </div>
+
+
+            <div class="breed">
+			<div class="image">
+                    <img src="jpg/Sulphur-crested Cockatoos.jpg" alt="Sulphur-crested Cockatoos">
+                </div>
+                <div class="info">
+                    <h2 id="card">Sulphur-crested Cockatoos</h2>
+                    <p id="sub-topic"><span class="label-sub-topic">Life Expectancy:</span> 40-70 years</p>
+                    <p id="sub-topic"><span class="label-sub-topic">Loyalty:</span> High</p>
+                    <p id="sub-topic"><span class="label-sub-topic">Temperament:</span> Intelligent, loving</p>
+                    <p id="sub-topic"><span class="label-sub-topic">Size:</span> Medium to large</p>
+                    <hr>
+                    <div class="arrow">&#9660;</div>
+                    <p class="expandable">The Sulphur-crested Cockatoo is a beautiful white bird with a unique yellow crest that distinguishes them. The average 
+					lifespan for these Cockatoo is around 40 to 70 years. Which makes them perfect for long term companion. They eat fresh fruits, vegetables 
+					and the occasional nut. With proper care with love, and attention, Sulphur-crested Cockatoos can become beloved pets for a lifetime.
+                    </p>
+                </div>
+                
+            </div>
+
+
+            <div class="breed">
+                <div class="image">
+                    <img src="jpg/Fischers Lovebird.jpg" alt="Fischers Lovebird">
+                </div>
+                <div class="info">
+                    <h2 id="card">Fischer's Lovebird </h2>
+                    <p id="sub-topic"><span class="label-sub-topic">Life Expectancy:</span> 10-15 years</p>
+                    <p id="sub-topic"><span class="label-sub-topic">Loyalty:</span> Medium to High</p>
+                    <p id="sub-topic"><span class="label-sub-topic">Temperament:</span> fun-loving, social</p>
+                    <p id="sub-topic"><span class="label-sub-topic">Size:</span> Small to Medium</p>
+                    <hr>
+                    <div class="arrow">&#9660;</div>
+                    <p class="expandable"> Fischer's Lovebird is an African parrot known for being small and colorful. Their color and joyful nature make them an
+					excellent family members. Their average lifespan is between 10 to 15 years. They eat pellets, fresh fruits, vegetables, and the occasional 
+					seed. Fischer's Lovebirds are social creatures, it’s crucial to spend time with them every day. If love and good care provided, Fischer's 
+					Lovebirds could provide their owners joy and companionship.</p>
+                </div>
+            </div>
+
+
+            <div class="breed">
+				<div class="image">
+                    <img src="jpg/Canary.jpg" alt="Canary">
+                </div>
+                <div class="info">
+                    <h2 id="card">Canary</h2>
+                    <p id="sub-topic"><span class="label-sub-topic">Life Expectancy:</span> 8-15 years</p>
+                    <p id="sub-topic"><span class="label-sub-topic">Loyalty:</span> Moderate</p>
+                    <p id="sub-topic"><span class="label-sub-topic">Temperament:</span> Calm, Singers</p>
+                    <p id="sub-topic"><span class="label-sub-topic">Size:</span> Small</p>
+                    <hr>
+                    <div class="arrow">&#9660;</div>
+                    <p class="expandable">Canaries which are native to the Canary Islands, are small songbirds with bright colors. Their average lifespan is 
+					between 8 to 15 years. Canaries are granivorous, they eat mostly seeds, but they also eat fresh fruits and vegetables. These lovely birds 
+					bring joy with their beautiful songs and charming personalities when given a clean cage and have been given a really good care of them.</p>
+                </div>
+                
+            </div>
+
+
+            <div class="breed">
+                <div class="image">
+                    <img src="jpg/Budgerigar.jpg" alt="Budgerigar">
+                </div>
+                <div class="info">
+                    <h2 id="card">Budgerigar</h2>
+                    <p id="sub-topic"><span class="label-sub-topic">Life Expectancy:</span> 5-8 years</p>
+                    <p id="sub-topic"><span class="label-sub-topic">Loyalty:</span> Moderate</p>
+                    <p id="sub-topic"><span class="label-sub-topic">Temperament:</span> Social, Lively Active</p>
+                    <p id="sub-topic"><span class="label-sub-topic">Size:</span> small</p>
+                    <hr>
+                    <div class="arrow">&#9660;</div>
+                    <p class="expandable">Budgerigars, also known as Budgies or Parakeets, are small and colorful parrots native to Australia. Their average 
+					lifespan of 5 to 8 years, though some can live longer. Budgerigars eat seeds, but they also enjoy fresh fruits and vegetables and treats on
+					occasion. With their playful nature and ability to mimic sounds and words when they are comfortable and safe, these social birds make 
+					wonderful companions.</p>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div id="social-media">
+                <h4>Follow us on</h4>
+                <a href="https://www.facebook.com/"><img src="jpg/facebook_icon.png" alt="Facebook"></a>
+                <a href="https://www.instagram.com/"><img src="jpg/insta_icon.png" alt="Instagram"></a>
+                <a href="https://www.twitter.com/"><img src="jpg/twitter1.png" alt="Twitter"></a>
+            </div>
+
+            <div id="contact">
+                <h4>Contact us</h4>
+                <div>
+                    <img src="jpg/carbon_location.png" alt="Location">
+                    <a href="https://www.polytechnic.bh/">Polytechnic</a>
+                </div>
+                <div>
+                    <img src="jpg/carbon_phone-voice.png" alt="Phone">
+                    <a href="tel:+97333151099">33151099</a>
+                </div>
+                <div>
+                    <img src="jpg/clarity_email-line.png" alt="Email">
+                    <a href="mailto:info@animals.com">info@animals.com</a>
+                </div>
+            </div>
+
+            <div id="aboutWebsite">
+                <h1>WildWhiskers</h1>
+            <p>Your Ultimate Guide to Pets and Wildlife.</p>
+            </div>
+
+            <div id="copyright">
+                <p>&copy; 2022 WildWhiskers. All rights reserved.</p>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
